# ragout

./: .pre-commit-config.yaml  Makefile  pyproject.toml  secrets.baseline
.kilo/plans/: design-spec.md  implementation.md
service/: pyproject.toml
service/src/service/: config.py
service/src/service/api/: run.py
service/src/service/api/routers/: health.py
service/src/service/providers/: __init__.py  base.py  embeddings.py  factory.py  llm.py  reranker.py
service/tests/: conftest.py  fakes.py
service/tests/unit/: test_cohere_reranker.py  test_config.py  test_openai_providers.py  test_provider_factory.py  test_provider_protocols.py
