[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.137.1",
    "uvicorn>=0.49.0",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "pypdf>=6.13.2",
    "markdown-it-py>=4.2.0",
    "openai>=2.42.0",
    "cohere>=7.0.4",
]

[project.scripts]
service-api = "service.api.run:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
